Bug 153767 - FILEOPEN XLSX Boolean formula results not loaded, needs recalculation
Summary: FILEOPEN XLSX Boolean formula results not loaded, needs recalculation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: XLSX
  Show dependency treegraph
 
Reported: 2023-02-20 21:23 UTC by Gabor Kelemen (Collabora)
Modified: 2023-06-24 04:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
The Customers2 tab in Excel and Calc (275.11 KB, image/png)
2023-02-20 21:23 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-02-20 21:23:26 UTC
Created attachment 185504 [details]
The Customers2 tab in Excel and Calc

attachment 185496 [details] from bug 153763 has the following formula on the Customers2 sheet in the H3:H20 range:
=NOT(IF(G3>1;TRUE;FALSE))
When the file is loaded, all cells in the above range open with the value 0 instead of a series of TRUE/FALSE.

1. Open attachment 185496 [details] 
2. Go to the Customers2 sheet
3. Observe that the H3:H20 range has the 0 values
4. Press F9
-> the values change to TRUE/FALSE according to the formula result. These match what Excel shows.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 16a35542aa07ed69c6c699d1c17f076d87708958
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Started in 6.2 with:
https://git.libreoffice.org/core/+/bd3baf8dab6c5b8865a33136cc28a016e6ee6afb

author	Eike Rathke <erack@redhat.com>	Tue Jul 17 12:58:30 2018 +0200
committer	Eike Rathke <erack@redhat.com>	Tue Jul 17 17:19:13 2018 +0200

OOXML import: CalcFormulaTree() is unnecessary, tdf#94925 follow-up

Adding CC to: Eike Rathke
Comment 1 Commit Notification 2023-02-23 01:34:21 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/05ac57f85eb622b798719db03bbdd07b79e1703a

Resolves: tdf#153767 Try harder to import OOXML bool shared formula result

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2023-02-23 01:34:55 UTC
Pending review https://gerrit.libreoffice.org/c/core/+/147444 for 7-5
Comment 3 Commit Notification 2023-02-23 13:19:48 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fce77173646392847055745c6342704eb6e500a9

tdf#153767: sc_subsequent_filters_test2: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-03-01 10:21:23 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/816b0e97f32df82a1ffc23950d5bf21760a4cd39

Resolves: tdf#153767 Try harder to import OOXML bool shared formula result

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.