Resolves: tdf#153767 Try harder to import OOXML bool shared formula result

... by setting the result value or if necessary recalculating even if
AutoCalc is turned off for the document. Similar for other implicitly
recalculating formula types.
Also set a boolean number format if none.

Change-Id: I2f75735707180eccf4b2c525738ac0b763901230
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147425
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 05ac57f85eb622b798719db03bbdd07b79e1703a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147444
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 816b0e97f32df82a1ffc23950d5bf21760a4cd39)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153546
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>