include/formula/tokenarray.hxx
@@ -430,6 +430,11 @@ public:
                         example OOXML. */
     bool            IsRecalcModeMustAfterImport() const
                                 { return (nMode & ScRecalcMode::EMask) <= ScRecalcMode::ONLOAD_ONCE; }
+    void            ClearRecalcModeMustAfterImport()
+                                {
+                                    if (IsRecalcModeMustAfterImport() && !IsRecalcModeAlways())
+                                        SetExclusiveRecalcModeNormal();
+                                }
 
                             /** Get OpCode of the most outer function */
     inline OpCode           GetOuterFuncOpCode() const;
