sc/source/filter/oox/formulabuffer.cxx
@@ -22,6 +22,7 @@
 #include <oox/token/tokens.hxx>
 #include <oox/helper/progressbar.hxx>
 #include <svl/sharedstringpool.hxx>
+#include <svl/numformat.hxx>
 #include <sal/log.hxx>
 
 using namespace ::com::sun::star::uno;
@@ -154,20 +155,41 @@ void applySharedFormulas(
                 pCell = new ScFormulaCell(rDoc.getDoc(), aPos, *pArray);
 
             rDoc.setFormulaCell(aPos, pCell);
-            if (rDoc.getDoc().GetNumberFormat(aPos.Col(), aPos.Row(), aPos.Tab()) % SV_COUNTRY_LANGUAGE_OFFSET == 0)
+            const bool bNeedNumberFormat = ((rDoc.getDoc().GetNumberFormat(
+                            aPos.Col(), aPos.Row(), aPos.Tab()) % SV_COUNTRY_LANGUAGE_OFFSET) == 0);
+            if (bNeedNumberFormat)
                 pCell->SetNeedNumberFormat(true);
 
             if (rDesc.maCellValue.isEmpty())
             {
                 // No cached cell value. Mark it for re-calculation.
                 pCell->SetDirty();
+                // Recalc even if AutoCalc is disabled. Must be after
+                // SetDirty() as it also calls SetDirtyVar().
+                pCell->AddRecalcMode( ScRecalcMode::ONLOAD_ONCE);
                 continue;
             }
 
-            // Set cached formula results. For now, we only use numeric and string-formula
-            // results. Find out how to utilize cached results of other types.
+            // Set cached formula results. For now, we only use boolean,
+            // numeric and string-formula results. Find out how to utilize
+            // cached results of other types.
             switch (rDesc.mnValueType)
             {
+                case XML_b:
+                    // boolean value.
+                    if (bNeedNumberFormat)
+                    {
+                        rDoc.getDoc().SetNumberFormat( aPos,
+                                rDoc.getDoc().GetFormatTable()->GetStandardFormat( SvNumFormatType::LOGICAL));
+                    }
+                    if (rDesc.maCellValue == "1" || rDesc.maCellValue == "0")
+                        pCell->SetResultDouble(rDesc.maCellValue == "1" ? 1.0 : 0.0);
+                    else
+                    {
+                        // Recalc even if AutoCalc is disabled.
+                        pCell->AddRecalcMode( ScRecalcMode::ONLOAD_ONCE);
+                    }
+                break;
                 case XML_n:
                     // numeric value.
                     pCell->SetResultDouble(rDesc.maCellValue.toDouble());
@@ -193,6 +215,9 @@ void applySharedFormulas(
                 default:
                     // Mark it for re-calculation.
                     pCell->SetDirty();
+                    // Recalc even if AutoCalc is disabled. Must be after
+                    // SetDirty() as it also calls SetDirtyVar().
+                    pCell->AddRecalcMode( ScRecalcMode::ONLOAD_ONCE);
             }
         }
     }
